no toma ips repetidas y algunos arreglos mas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Formulario</title>
+    <title>Trabajo Final | Sistemas Distribuidos</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -45,6 +45,7 @@
             <button type="button" class="btn btn-primary" onclick="enviar()">Enviar</button>
           </div>
         </div>
+        <p class="error text-center" style="display:none"> Ya está registrada esa IP.</p>
       </div>
     </div>
 
@@ -56,6 +57,7 @@
               <th>Estado</th>
               <th>IP</th>
               <th>Puerto</th>
+              <th>&nbsp;</th>
               <th>&nbsp;</th>
               <th>&nbsp;</th>
             </tr>
