rename and delete files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="author" content="Lucía Copes, Franco Kuhn, Gonzalo Ruiz">
     <title>Trabajo Final | Sistemas Distribuidos</title>
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -17,6 +19,7 @@
 
 </head>
 <body class="fixed-sn">
+
   <div class="lwrapper">
     <div class="loader">
     <span>{</span><span>}</span>
@@ -83,6 +86,8 @@
         })
     </script>
     <script>
+
+        /****** SCRIPT QUE DEVUELVE LA IP DEL CLIENTE PARA MOSTRAR EN EL HTML ******/
 
         // NOTE: window.RTCPeerConnection is "not a constructor" in FF22/23
         var RTCPeerConnection = /*window.RTCPeerConnection ||*/ window.webkitRTCPeerConnection || window.mozRTCPeerConnection;
