favicon corazoncito jaja

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Lucía Copes, Franco Kuhn, Gonzalo Ruiz">
     <title>Trabajo Final | Sistemas Distribuidos</title>
 
+    <link rel="shortcut icon" type="image/png" href="img/fav.png"/>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
